chatroom,使用redis取数据,校验账号密码进行登录

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 chatroom/client/chatroom_client
 /chatroom/client/client
 /chatroom/server/server
+/chatroom/server/main/main
+/chatroom/server/main/chatroom_server
